[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Consola.tres" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scenes/Retime Tempo UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Retime Tempo UI" type="WindowDialog"]
visible = true
margin_right = 340.0
margin_bottom = 150.0
window_title = "Retime Tempo"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.788845
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Main UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Main UI/AspectRatioContainer"]
margin_left = 37.5
margin_right = 302.5
margin_bottom = 118.327
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main UI/AspectRatioContainer/CenterContainer"]
margin_top = 23.0
margin_right = 265.0
margin_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 34.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 52.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "From"

[node name="From BPM Line Edit" type="LineEdit" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 222.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
expand_to_text_length = true

[node name="Label2" type="Label" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 226.0
margin_top = 5.0
margin_right = 265.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "BPM"

[node name="HBoxContainer2" type="HBoxContainer" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 265.0
margin_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "To"

[node name="To BPM Line Edit" type="LineEdit" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 30.0
margin_right = 222.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1
expand_to_text_length = true

[node name="Label2" type="Label" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 226.0
margin_top = 5.0
margin_right = 265.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "BPM"

[node name="Bottom Buttons" type="Control" parent="."]
anchor_top = 0.829
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.35
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Bottom Buttons"]
anchor_left = 0.019
anchor_right = 0.981
anchor_bottom = 0.93
margin_bottom = 7.1455
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel Button" type="Button" parent="Bottom Buttons/HBoxContainer"]
margin_right = 161.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Cancel"

[node name="Apply Button" type="Button" parent="Bottom Buttons/HBoxContainer"]
margin_left = 165.0
margin_right = 327.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Apply"

[connection signal="text_changed" from="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer/From BPM Line Edit" to="." method="_on_From_BPM_Line_Edit_text_changed"]
[connection signal="text_entered" from="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer/From BPM Line Edit" to="." method="_on_From_BPM_Line_Edit_text_entered"]
[connection signal="text_changed" from="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer2/To BPM Line Edit" to="." method="_on_To_BPM_Line_Edit_text_changed"]
[connection signal="text_entered" from="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer2/To BPM Line Edit" to="." method="_on_To_BPM_Line_Edit_text_entered"]
[connection signal="pressed" from="Bottom Buttons/HBoxContainer/Cancel Button" to="." method="_on_Cancel_Button_pressed"]
[connection signal="pressed" from="Bottom Buttons/HBoxContainer/Apply Button" to="." method="_on_Apply_Button_pressed"]
